Resolved page extra horizontal scroll width

--- a/home.css
+++ b/home.css
@@ -1,7 +1,230 @@
-.navbar{
+/*
+------------------------------------------
+
+------------------------------------------
+*/
+/*Tiny device(like my current phone:tecno-y2*/
+
+
+@media screen and (device-aspect-ratio: 2/3){
+  .card-img{
+    height:50% !important;
+    width:50% !important;
+  }
+  .arrow{
+    color: black !important;
+    background-color: #ffca04 !important;
+    border:1px black solid !important;
+    padding-right: 70px !important;
+    padding-left: 70px !important;
   
+  }
+  
+  .btn{
+    margin-top: 85px;
+   
+  }
+
+
+  .new{
+    background-color: whitesmoke;
+    min-height: 10vh;
+    margin-top: 70px !important;
+  }
+  
+  #view2 .lead{
+    text-align: center;
+  }
+  
+  #view2 .lead h2{
+    padding-top: 20px; 
+    font-size: xx-small; 
+
+  }
+
+  
+
+}
+
+/*Small devices (tablets, 768px and up) */
+@media (max-width:992px) {
+  /*
+  ------------------------------------------------------
+  JUMBOTRON
+  ------------------------------------------------------
+  */
+  
+  .jumbotron {
+    margin-top: 170px !important;
+    background-color: white !important;
+    background-image: url("./binarymap.jpg");
+    background-size: 100% 100%;
+    max-height: 480px !important;
+  }
+  
+  .jumbotron h1{
+    font-size: 40px;
+    margin-top: 40px;
+    text-align: center;
+    word-spacing: 2em;
+    font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 700 !important;
+  }
+  
+  .jumbotron .lead{
+    text-align: center;
+    margin-top: 90px;
+    font-size: 30px !important;
+    line-height: 30px;
+    font-weight: 700 !important;
+  }
+  
+  .arrow{
+    color: black !important;
+    background-color: #ffca04 !important;
+    border:1px black solid !important;
+    padding-right: 70px !important;
+    padding-left: 70px !important;
+    margin-top:85px;
+  }
+  .temp{
+    margin-top: 50px !important;
+  }
+  .new{
+    background-color: whitesmoke;
+    min-height: 10vh;
+    margin-top: 20px !important;
+  }
+  
+  #view2 .lead{
+    text-align: center;
+  }
+  
+  #view2 .lead h2{
+    padding-top: 20px; 
+    font-size: larger; 
+  }
+  .underline{
+    border-bottom: 2px #ffca04 solid;
+    padding-top: 40px;
+  }
+
+  .lead2{
+    text-align: center;
+    background-color: whitesmoke;
+    margin-bottom:20px;
+  }
+  
+  .lead2 h2{
+    padding-top:30px;
+    padding-bottom:30px;
+    font-size: larger;
+  }
+
   
 }
+
+/* Medium devices (desktops, 992px and up) 
+@media (min-width: 992px) {
+  .jumbotron h1 {
+    font-size: 40px;
+    
+}
+
+#view2 .lead h2{
+  margin-top: 140px;
+}
+
+.lead{
+  font-size: 40px !important;
+}
+}
+
+/*Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .jumbotron h1 {
+      font-size: 400%;
+  }
+
+  .jumbotron {
+    margin-top: 170px !important;
+    background-color: white !important;
+    background-image: url("./binarymap.jpg");
+    background-size: 100% 100%;
+    max-height: 480px !important;
+  }
+
+  .jumbotron h1{
+    margin-top: 20px;
+    text-align: center;
+    word-spacing: 2em;
+    font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 700 !important;
+  }
+
+  .jumbotron .lead{
+    text-align: center;
+    margin-top: 90px;
+    font-size: 50px !important;
+    line-height: 55px;
+    font-weight: 700 !important;
+  }
+
+  .arrow{
+    color: black !important;
+    background-color: #ffca04 !important;
+    border:1px black solid !important;
+    padding-right: 70px !important;
+    padding-left: 70px !important;
+
+  }
+
+  .btn{
+    margin-top: 45px;
+    margin-bottom: 40px !important;
+  }
+
+
+
+
+
+  .new{
+    background-color: whitesmoke;
+    min-height: 20vh;
+  }
+
+  #view2 .lead{
+    text-align: center;
+  }
+
+  #view2 .lead h2{
+    padding-top: 20px;  
+  }
+  .underline{
+    border-bottom: 2px #ffca04 solid;
+    padding-top: 40px;
+  }
+
+
+  
+  
+  .lead2{
+    text-align: center;
+    background-color: whitesmoke;
+    margin-bottom:20px;
+  }
+  
+  .lead2 h2{
+    padding-top:30px;
+    padding-bottom:30px;
+  }
+}
+
+/*
+------------------------------------------
+NAVBAR
+------------------------------------------
+*/
 
 .navbar-nav > .nav-item{
   margin-right:50px;
@@ -20,123 +243,29 @@
 }
 
 
-#view2 .lead{
-  min-height: 20vh;
-  background-color: whitesmoke;
-  text-align: center;
-  
-}
+/*
+----------------------------------------------------
+BELT
+----------------------------------------------------
+*/
 
-#view2 .lead h2{
-  display: block;
-  padding-top: 40px !important;
-}
+
+
+
+
+
+
 
 .card{
-  /*max-height: 380vh !important;*/
+  max-height: 380vh !important;
   margin-top: 10px;
-  border: 2px white solid !important;
+  border: 1px white solid !important;
 }
 
 
-.jumbotron {
-  margin-top: 170px !important;
-  background-color: white !important;
-  background-image: url("./binarymap.jpg");
-  background-size: 100% 100%;
-  max-height: 480px !important;
-}
-
-.jumbotron h1{
-  margin-top: 20px;
-  text-align: center;
-  word-spacing: 2em;
-  font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700 !important;
-}
 
 
-.lead{
-  text-align: center;
-  margin-top: 90px;
-  font-size: 50px !important;
-  line-height: 55px;
-  font-weight: 700 !important;
-}
 
-.lead2{
 
-  text-align: center;
-  background-color: whitesmoke;
-  margin-bottom:20px;
-}
 
-.lead2 h2{
-  padding-top:30px;
-  padding-bottom:30px;
-}
-
-.underline{
-  border-bottom: 2px #ffca04 solid;
-  padding-top: 40px;
-}
-
-.arrow{
-  color: black !important;
-  background-color: #ffca04 !important;
-  border:1px black solid !important;
-  padding-right: 70px !important;
-  padding-left: 70px !important;
-
-}
-
-.btn{
-  margin-top: 45px;
-  margin-bottom: 40px !important;
-}
-/*.card{
-  width: 100% !important;
-}
-
-.card-img{
-  float:right !important;
-}
-/* Small devices (tablets, 768px and up) */
-@media (max-width: 992px) {
-  .jumbotron h1 {
-      font-size: 40px;
-      
-  }
-
-  #view2 .lead h2{
-    margin-top: 140px;
-  }
-
-  .lead{
-    font-size: 40px !important;
-  }
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-  .jumbotron h1 {
-    font-size: 40px;
-    
-}
-
-#view2 .lead h2{
-  margin-top: 140px;
-}
-
-.lead{
-  font-size: 40px !important;
-}
-}
-
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-  .jumbotron h1 {
-      font-size: 400%;
-  }
-}
 
